BE native - Replace List.of to Arrays.asList